<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#254FB8"
    android:padding="@dimen/activity_padding"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Intro.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yaslogo"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:background="#FFFFFF"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="#FFFFFF"
        android:inputType="textCapWords"
        android:layout_marginBottom="20dp"
        />

    <CheckBox
        android:id="@+id/showPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="show password"/>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/roun_rect_yellow"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/atau"/>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/roun_rect_yellow"
        android:text="@string/signup"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>