<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    android:gravity="center"
    android:background="#254FB8"
    tools:context=".Pembelian">

    <TextView
        android:id="@+id/txt_activitypembelian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_pembelian"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:padding="@dimen/activity_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding"
            android:layout_marginBottom="5dp">
                    <!--Nama Pembeli-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_pembeli"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/username_buyer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_pembeli"
                        android:inputType="text"
                        android:layout_marginBottom="5dp"/>
                    <!--Email Pembeli-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_pembeli"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/email_buyer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_pembeli"
                        android:layout_marginBottom="5dp"/>
                    <!--Tipe Kendaraan : Honda, Yamaha, etc-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipe_kendaraan"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/tipe_kendaraan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tipe_kendaraan"
                        android:inputType="textCapWords"
                        android:layout_marginBottom="5dp"/>
                    <!--Nomor Kendaraan-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_kendaraan"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/nomor_kendaraan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nomor_kendaraan"
                        android:inputType="textCapWords"
                        android:layout_marginBottom="5dp"/>
                    <!--Harga Kendaraan-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_kendaraan"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/harga_kendaraan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/harga_kendaraan"
                        android:inputType="textCapWords"
                        android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/txt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roun_rect_yellow"
                android:text="@string/konfirmasi_pembelian"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>