<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/person3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.0"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    >

                    <!--Menampilkan nama pembeli-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/colorGray"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/name1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_db"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                    </LinearLayout>


                    <!--Menampilkan nomor kendaraan-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nomor"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/colorGray"
                            android:layout_marginRight="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/nokendaraan1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nomor_kendaraan"
                            android:textColor="@color/colorLightGray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!--Menampilkan tipe kendaraan-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tipe"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/colorGray"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/tipekendaraan1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tipe"
                            android:textColor="@color/colorLightGray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!--Menampilkan harga kendaraan-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/harga"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/colorGray"
                            android:layout_marginRight="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/nominal1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/harga"
                            android:textSize="14sp"
                            android:textColor="@color/colorLightGray" />
                    </LinearLayout>

                    <!--Menampilkan email pembeli-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/colorGray"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/email1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/alamat_email"
                            android:textColor="@color/colorLightGray"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>